src/objects/Count_Session_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_Location_1__c</fullName>
        <label>Assigned Location 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Location_2__c</fullName>
        <label>Assigned Location 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Count_Session__c</fullName>
        <label>Count Session</label>
        <referenceTo>Count_Session__c</referenceTo>
        <relationshipName>Count_Session_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Counted_Qty__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Counted Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Counted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Counted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Selected_Part__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Selected Part</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issue_Indicator__c</fullName>
        <description>Issue type</description>
        <label>Issue Indicator</label>
        <picklist>
            <picklistValues>
                <fullName>Duplicate part</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid part</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing vendor</fullName>
            </picklistValues>
            <picklistValues>
               <fullName>Active count</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Count_Session_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Net_Adjustment__c</fullName>
        <formula>Cost__c  *  Variance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Counted__c</fullName>
        <formula>IF(Is_Counted__c, Counted_Qty__c  *  Cost__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Counted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Uncounted__c</fullName>
        <formula>IF( NOT(Is_Counted__c), Qty_Available__c  *  Cost__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Uncounted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Part_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part Category</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Category__c.Type__c</field>
                <operation>equals</operation>
                <value>Part</value>
            </filterItems>
            <filterItems>
                <field>Category__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>Count Session Line Items</relationshipLabel>
        <relationshipName>Count_Session_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
	<fields>
        <fullName>Part_Number_Formula__c</fullName>
        <formula>IF(NOT(ISBLANK(Part__c)),  Part__r.Part_Number__c ,  Part_Number__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Part Number Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <label>Part Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part</label>
        <referenceTo>Part__c</referenceTo>
        <relationshipName>Count_Session_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Qty_Available__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Qty Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Cost_Adjustment__c</fullName>
        <label>Total Cost Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Variance__c</fullName>
        <formula>if( Is_Counted__c , Counted_Qty__c -  Qty_Available__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Count Session Line Item</label>
    <nameField>
        <displayFormat>CSLI-{00000000}</displayFormat>
        <label>Count Session Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Count Session Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>